@startuml
title US033-CD

skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

package "ui.console" #DDDDDD {
    class ListUsersUI {
        - controller: ListUsersController
        + run(): void
        + displayUsers(users: List<User>): void
        + displayMessage(message: String): void
        + displayError(message: String): void
    }
}

package "controller" #DDDDDD {
    class ListUsersController {
        - listUsersService: ListUsersService
        + listUsers(): List<User>
    }
}

package "application" #DDDDDD {
    class ListUsersService {
        - userRepository: UserRepository
        - authorizationService: AuthorizationService
        + listUsers(): List<User>
    }

    class AuthorizationService {
        + isAuthorized(permissionName: String): boolean
        + requirePermission(permissionName: String): void
    }
}

package "domain.user" #DDDDDD {
    class User {
        - email: Email
        - name: String
        - phoneNumber: PhoneNumber
        - enabled: boolean
        - roles: Set<Role>
        - securityClearance: SecurityClearance
        - skillsAssessment: SkillsAssessment
        + email(): Email
        + name(): String
        + phoneNumber(): PhoneNumber
        + roles(): Set<Role>
        + status(): String
        + isEnabled(): boolean
        + isDisabled(): boolean
        + hasPermission(permission: Permission): boolean
    }

    class Email {
        - value: String
        + value(): String
    }

    class PhoneNumber {
        - value: String
        + value(): String
    }

    class SecurityClearance {
        - expirationDate: LocalDate
    }

    class SkillsAssessment {
        - assessmentDate: LocalDate
        - validityPeriodInMonths: int
    }
}

package "domain.auth" #DDDDDD {
    class Role {
        - name: String
        - permissions: Set<Permission>
        + name(): String
        + hasPermission(permission: Permission): boolean
    }

    class Permission {
        - name: String
    }
}

package "repository" #DDDDDD {
    interface UserRepository {
        + findAll(): List<User>
    }
}

ListUsersUI --> ListUsersController : uses >
ListUsersController --> ListUsersService : uses >
ListUsersService --> AuthorizationService : checks permission >
ListUsersService --> UserRepository : retrieves >
UserRepository --> User : returns >

User *-- Email
User *-- PhoneNumber
User *-- SecurityClearance
User *-- SkillsAssessment
User "1" o-- "1..*" Role
Role "1" o-- "*" Permission

@enduml